--- a/style.css
+++ b/style.css
@@ -3,22 +3,13 @@ body {
   justify-content: center;
 }
 
-.container {
-
-}
-
-#green {
-  background-color: #4DAA57;
-  font-size: 7rem;
-}
-
 .deck {
   background-color: #25283D;
   width: 80%;
   height: 80%;
   display: flex;
   /* flex-direction: column; */
-  /* justify-content: center; */
+  justify-content: center;
   align-content: space-around;
   flex-wrap: wrap;
 }
