--- a/style.css
+++ b/style.css
@@ -1,12 +1,30 @@
 body {
   background-color: #B6C4CD;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Righteous', cursive;
+  color: #25283D;
 }
 
 .container {
   display: flex;
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: center;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.scoreArea {
+  display: inline-block;
+  margin: .5rem;
+}
+
+button {
+  background-color: #B6C4CD;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
 }
 
 .deck {
@@ -14,7 +32,6 @@ body {
   width: 80%;
   height: 80%;
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
   align-content: space-around;
   flex-wrap: wrap;
@@ -28,7 +45,7 @@ body {
   width: 10rem;
   background-color: #375D77;
   font-size: 0;
-  color: white;
+  color: #FCF7FF;
   margin: 1rem 1rem;
   list-style: none;
   display: flex;
@@ -50,8 +67,10 @@ body {
 
 .card.selected {
   user-select: none;
+  cursor: none;
 }
 
 .card.matched {
   user-select: none;
+  cursor: none;
 }
