--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ button {
   cursor: pointer;
 }
 
+button.playAgain {
+  font-size: 2rem;
+  font-family: 'Righteous', cursive;
+}
+
 .deck {
   background-color: #25283D;
   width: 80%;
@@ -73,4 +78,43 @@ button {
 .card.matched {
   user-select: none;
   cursor: none;
+}
+
+#winnerPop {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+#winnerPopContent {
+  text-align: center;
+  background-color: #B6C4CD;
+  color: black;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  width: 80%; /* Could be more or less, depending on screen size */
+  border-radius: 5px;
+}
+
+/* The Close Button */
+.close {
+  color: #25283D;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
