--- a/style.css
+++ b/style.css
@@ -158,3 +158,31 @@ button#playAgain {
       box-shadow: 0 0 0 0 rgba(82,196,205, 0);
   }
 }
+
+@media only screen and (max-width: 600px) {
+  header {
+    text-align: center;
+  }
+
+  .deck {
+    height: 95%;
+    width: 95%;
+  }
+
+  .card {
+    height: 4rem;
+    width: 4rem;
+    margin: .5rem .5rem;
+  }
+
+  .card:hover {
+    animation: none;
+  }
+
+  .card.green {
+    font-size: 2rem;
+  }
+  .card.orange {
+    font-size: 2rem;
+  }
+}
