--- a/style.css
+++ b/style.css
@@ -43,13 +43,15 @@ button#playAgain {
   background-color: #25283D;
   width: 80%;
   height: 80%;
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  justify-content: space-around;
   align-content: space-around;
   flex-wrap: wrap;
   border-radius: 5px;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .card {
@@ -185,5 +187,48 @@ button#playAgain {
   }
   .card.orange {
     font-size: 2rem;
+  }
+}
+
+@media screen and (orientation:landscape) and (max-width: 600px) {
+  header {
+    font-size: .5em;
+    padding: 0;
+    margin: 0;
+    display: inline-flex;
+  }
+
+  h1 {
+    margin: 0;
+  }
+
+  #mobile-headeer {
+    display: inline-block;
+  }
+
+  .scoreArea {
+    margin: .5em;
+    font-size: 1em;
+  }
+
+  #startOverBtn {
+    font-size: 1em    ;
+  }
+
+  #score-board {
+    display: inline-flex;
+  }
+
+  .deck {
+    width: 90%;
+    /* height: 50%; */
+    /* padding: 0;
+    margin: 0; */
+    justify-content: space-around;
+    align-items: space-around;
+  }
+  .card {
+    height: 4.5rem;
+    width: 4.5rem;
   }
 }
