--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #B6C4CD;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0;
   font-family: 'Righteous', cursive;
@@ -13,12 +13,27 @@ header {
   padding: 0;
 }
 
+h1 {
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+}
+
 .container {
   display: flex;
 	justify-content: center;
 	align-items: center;
   flex-direction: column;
   margin-bottom: 1rem;
+}
+
+.score-board {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  align-content: center;
 }
 
 .scoreArea {
@@ -40,18 +55,15 @@ button#playAgain {
 }
 
 .deck {
-  background-color: #25283D;
-  width: 80%;
-  height: 80%;
   display: grid;
+  background-color: #25283D;
+  width: 10rem * 5;
+  height: 10rem * 4;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   justify-content: space-around;
   align-content: space-around;
-  flex-wrap: wrap;
   border-radius: 5px;
-  padding-top: 1em;
-  padding-bottom: 1em;
 }
 
 .card {
@@ -162,7 +174,7 @@ button#playAgain {
   }
 }
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
   header {
     text-align: center;
   }
@@ -188,9 +200,9 @@ button#playAgain {
   .card.orange {
     font-size: 2rem;
   }
-}
+} */
 
-@media screen and (orientation:landscape) and (max-width: 600px) {
+@media screen and (max-width: 1168px) {
   header {
     font-size: .5em;
     padding: 0;
@@ -218,17 +230,29 @@ button#playAgain {
   #score-board {
     display: inline-flex;
   }
-
+/* 
   .deck {
     width: 90%;
-    /* height: 50%; */
-    /* padding: 0;
-    margin: 0; */
+    height: 50%;
+    padding: 0;
+    margin: 0;
     justify-content: space-around;
     align-items: space-around;
-  }
+  } */
   .card {
     height: 4.5rem;
     width: 4.5rem;
+    margin: .4rem .4rem;
+  } 
+  .card:hover {
+    animation: none;
+  }
+
+  .card.green {
+    font-size: 2rem;
+  }
+  
+  .card.orange {
+    font-size: 2rem;
   }
 }
